thinkingweekly/assets/stylesheets/app/thinkingliverpool.scss
.navbar-default .navbar-brand {
  color: $text-color;

  &:hover {
    color: $text-color;
  }
}

.navbar-default .navbar-nav > li  {
  a, a:hover {
    color: $text-color;
  }
}


.site-home-banner {
  margin-top: -22px;  /* shift up past navbar padding */
  background-image: url('../img/thinking-liverpool-whats-on.jpg');
  background-size: cover;

  img {
    width: 100%;
  }

  h1, h2 {
    color: white;
  }
  
  .jumbotron {
    background-color:  rgba(247,247,247, 0.8);

    h2 {
      font-size: 28px;
      color: $text-color;
    }

    li {
      background: none;
      border: none;
      color: $text-color;
      font-weight: bold;
    }
  }

}

h1.explainer {
  font-weight: lighter;
}

div.subscribe-form {
  margin-top: 20px;
  margin-bottom:  20px;
}

p.copyright {
  text-align: center;
}

a.oldskool,
p.copyright a {
  color: inherit;
  text-decoration: underline;
}

/* ==== Future Events: /whats-on-in-liverpool/ ==== */

.event h2.panel-title {
  font-size: 24px;
}

.event h3 {
  font-size: 18px;
  margin-top: 0px;
}

.event span > a {
  color: inherit;
}

p.more-events-next-week {
  margin-top: 20px;
  font-size: 24px;
  font-style: italic;
}

p.see-future-events {
  font-size: 24px;
}

/* ==== Past events: /whats-on-in-liverpool/past-events/ ==== */

.past-event-updates > h2 > a {
  font-size: 24px;
  color: inherit;
  text-decoration: underline;
  padding-top: 5px;
}

/* Site home: venue image */
.venue-image {
  position: relative;
  padding-bottom: 20px;

  h3 {
    position: absolute;
    top: 75%;
    left: 0;
    width: 100%;
    color: white;
    background: black;
  }
}

@media (max-width: 400px) {
  .venue-image {
    margin-bottom: 20px;
  }
}

/* Venue information page */

section.venue-information {
  margin-bottom: 20px;

  a {
    padding-right: 10px;
  }
}

section.venue-information 
section.venue-information .fa {
  /* Prevent the icon and the text from getting separated
   * http://stackoverflow.com/a/25233914
   */
  display: inline;
}

section.embedded-map {
  padding-bottom: 20px;
}

section.venue-future-events .panel-title > h3 {
  font-size: 22px;
}

section.venue-future-events .panel-title > h4 {
  font-size: 16px;
}

section.venue-future-events a {
  /* display: block;*/
}


/* Future event list, email archive event list */

.email-update-archive-event-list,
.future-event-list {
  img.event-image {
    width: 50%;

    &.pull-left { margin-right: 10px; }
    &.pull-right { margin-left: 10px; }
  }
}

/* Event detail page */

.event-detail {

  .event-title { font-size: 36px; }
  .starts-at   { font-size: 18px; }
  .venue-name  { font-size: 18px; }
  .description { padding-bottom: 20px; }

  .event-image {
    margin-bottom: $line-height-computed;

    &.hidden-xs {
      width: 50%;
    }

    &.hidden-lg {
      margin-bottom: $line-height-computed;
    }
  }

  .twitter-share-box {
    a.twitter-share-button {
      margin-top: ($line-height-computed / 2);
    }

    textarea {
      height: ($line-height-computed * 3);
    }

  }
}

